# PredProf

./: .env.example  .gitignore  DEVREADME.md  README.md  docker-compose.yml
api/: pyproject.toml
backend/: .gitignore  Dockerfile  create_tables_context.py  pyproject.toml  schema.sql
backend/app/: auth.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  seed.py
backend/app/crud/: __init__.py  allergen_crud.py  balance_topup_crud.py  dish_crud.py  order_crud.py  purchase_request_crud.py  review_crud.py  stats_crud.py  user_crud.py
backend/app/routes/: admin_routes.py  chef_routes.py  public_routes.py  student_routes.py
school-meal-system/: .prettierignore  README.md  index.html  package-lock.json  package.json
school-meal-system/src/: App.jsx  api.js  index.css  main.jsx
school-meal-system/src/api/: admin.js  allergen.js  auth.js  chef.js  config.js  student.js
school-meal-system/src/components/: Layout.jsx  Navbar.jsx  ProtectedRoute.jsx
school-meal-system/src/components/common/: CreatePurchaseRequestModal.jsx  DishCard.jsx  DishModal.jsx  FilterTabs.jsx  Icons.jsx  Modal.jsx  OrderCalendar.jsx  OrderCard.jsx  OrderModal.jsx  PageHeader.jsx  RejectRequestModal.jsx  ReviewsModal.jsx  StatCard.jsx  WeeklyPlanner.jsx
school-meal-system/src/components/dashboard/: DashboardAlerts.jsx  DashboardQuickActions.jsx  DashboardStatsGrid.jsx  DashboardTable.jsx  DashboardWelcomeSection.jsx  DataTable.jsx  (+1 more)
school-meal-system/src/context/: AuthContext.jsx
school-meal-system/src/pages/: LandingPage.jsx  Login.jsx  LoginPage.jsx  Register.jsx
(+29 files in other folders)
